--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@remix-run/react": "^1.7.3",
     "@remix-run/serve": "^1.7.3",
     "@remix-run/server-runtime": "^1.7.3",
+    "ariakit": "2.0.0-next.41",
     "clsx": "^1.2.1",
     "cuid": "^2.1.8",
     "lucide-react": "^0.92.0",
