--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   },
   "scripts": {
     "prepare": "prisma generate",
-    "dev": "run-p --race dev:*",
-    "dev:remix": "remix dev --sourcemap",
+    "dev": "NODE_ENV=development run-p --race dev:*",
+    "dev:remix": "remix watch --sourcemap",
+    "dev:server": "tsx watch --clear-screen=false build/index.js",
     "dev:tailwind": "pnpm run tailwind --watch",
     "dev:routes": "pnpm run routes --watch",
     "build": "tsc --noEmit && pnpm run tailwind --minify && pnpm run routes && remix build",
-    "start": "remix-serve build",
+    "start": "NODE_ENV=production node build/index.js",
     "lint": "eslint --ext js,ts,tsx,astro .",
     "lint-fix": "pnpm lint --fix",
     "format": "prettier --write .",
@@ -23,14 +24,16 @@
   "dependencies": {
     "@fontsource/rubik": "^4.5.11",
     "@prisma/client": "^4.5.0",
+    "@remix-run/express": "^1.7.3",
     "@remix-run/node": "^1.7.3",
     "@remix-run/react": "^1.7.3",
-    "@remix-run/serve": "^1.7.3",
-    "@remix-run/server-runtime": "^1.7.3",
     "ariakit": "2.0.0-next.41",
     "clsx": "^1.2.1",
+    "compression": "^1.7.4",
     "cuid": "^2.1.8",
+    "express": "^4.18.2",
     "lucide-react": "^0.92.0",
+    "morgan": "^1.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-expanding-textarea": "^2.3.6",
@@ -43,9 +46,13 @@
   "devDependencies": {
     "@itsmapleleaf/configs": "^1.1.5",
     "@remix-run/dev": "^1.7.3",
+    "@remix-run/serve": "^1.7.3",
     "@routes-gen/remix": "^0.3.5",
     "@rushstack/eslint-patch": "^1.2.0",
+    "@types/compression": "^1.7.2",
     "@types/eslint": "^8.4.7",
+    "@types/express": "^4.17.14",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.3",
     "@types/prettier": "^2.7.1",
     "@types/react": "^18.0.21",
