--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "compression": "^1.7.4",
     "cuid": "^2.1.8",
     "express": "^4.18.2",
+    "immer": "^9.0.16",
     "lucide-react": "^0.92.0",
     "morgan": "^1.10.0",
     "react": "^18.2.0",
@@ -41,6 +42,8 @@
     "react-use-measure": "^2.1.1",
     "react-virtuoso": "^3.1.1",
     "routes-gen": "^0.5.2",
+    "socket.io": "^4.5.3",
+    "socket.io-client": "^4.5.3",
     "zod": "^3.19.1"
   },
   "devDependencies": {
