--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "clsx": "^1.2.1",
     "compression": "^1.7.4",
     "cuid": "^2.1.8",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "immer": "^9.0.16",
     "lucide-react": "^0.92.0",
