--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "routes-gen": "^0.5.2",
     "socket.io": "^4.5.3",
     "socket.io-client": "^4.5.3",
+    "use-sync-external-store": "^1.2.0",
     "zod": "^3.19.1"
   },
   "devDependencies": {
