make project runnable on windows

--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   },
   "scripts": {
     "prepare": "prisma generate",
-    "clean": "rm -rf build public/build .cache",
-    "dev": "pnpm clean && NODE_ENV=development run-p --race dev:*",
+    "clean": "del-cli build public/build .cache",
+    "dev": "pnpm clean && cross-env NODE_ENV=development run-p --race dev:*",
     "dev:remix": "remix watch --sourcemap",
     "dev:server": "wait-on file:build/index.js && tsx watch --clear-screen=false build/index.js",
     "dev:tailwind": "pnpm run tailwind --watch",
     "dev:routes": "pnpm run routes --watch",
     "build": "pnpm clean && tsc --noEmit && pnpm run tailwind --minify && pnpm run routes && remix build",
-    "start": "NODE_ENV=production node build/index.js",
+    "start": "cross-env NODE_ENV=production node build/index.js",
     "lint": "eslint --ext js,ts,tsx,astro .",
     "lint-fix": "pnpm lint --fix",
     "format": "prettier --write .",
@@ -71,6 +71,8 @@
     "@types/prettier": "^2.7.1",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "cross-env": "^7.0.3",
+    "del-cli": "^5.0.0",
     "eslint": "^8.26.0",
     "eslint-plugin-tailwindcss": "^3.6.2",
     "npm-run-all": "^4.1.5",
