--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "typecheck": "tsc --noEmit",
     "tailwind": "tailwindcss -i styles/styles.css -o app/generated/styles.css -c tailwind.config.cjs",
     "routes": "routes-gen --driver @routes-gen/remix",
-    "env-check": "tsx app/core/env.server.ts"
+    "env-check": "tsx app/core/env.server.ts",
+    "unused-deps": "depcheck"
   },
   "dependencies": {
     "@fontsource/rubik": "^4.5.11",
     "@nanostores/react": "^0.4.0",
     "@prisma/client": "^4.5.0",
-    "@remix-run/express": "^1.7.4",
+    "@remix-run/express": "^1.7.5",
     "@remix-run/node": "^1.7.4",
     "@remix-run/react": "^1.7.4",
     "@supabase/supabase-js": "^2.0.4",
@@ -34,7 +35,6 @@
     "chalk": "^5.1.2",
     "clsx": "^1.2.1",
     "compression": "^1.7.4",
-    "cross-fetch": "^3.1.5",
     "cuid": "^2.1.8",
     "dotenv": "^16.0.3",
     "execa": "^6.1.0",
@@ -48,7 +48,6 @@
     "react-dom": "^18.2.0",
     "react-expanding-textarea": "^2.3.6",
     "react-mosaic-component": "^5.3.0",
-    "react-use-measure": "^2.1.1",
     "react-virtuoso": "^3.1.1",
     "routes-gen": "^0.5.2",
     "socket.io": "^4.5.3",
@@ -68,11 +67,11 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.7",
     "@types/node-cron": "^3.0.5",
-    "@types/prettier": "^2.7.1",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
+    "depcheck": "^1.4.3",
     "eslint": "^8.26.0",
     "eslint-plugin-tailwindcss": "^3.6.2",
     "npm-run-all": "^4.1.5",
