--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
     "prepare": "prisma generate",
     "clean": "del-cli build public/build .cache",
     "dev": "pnpm clean && cross-env NODE_ENV=development run-p --race dev:*",
-    "dev:remix": "remix watch --sourcemap",
-    "dev:server": "wait-on file:build/index.js && tsx watch --clear-screen=false build/index.js",
+    "dev:remix": "remix dev --sourcemap",
     "dev:tailwind": "pnpm run tailwind --watch",
     "dev:routes": "pnpm run routes --watch",
     "build": "pnpm clean && tsc --noEmit && pnpm run tailwind --minify && pnpm run routes && remix build",
-    "start": "cross-env NODE_ENV=production node build/index.js",
+    "start": "cross-env NODE_ENV=production remix-serve build",
     "lint": "eslint --ext js,ts,tsx,astro .",
     "lint-fix": "pnpm lint --fix",
     "format": "prettier --write .",
@@ -25,24 +24,18 @@
   },
   "dependencies": {
     "@fontsource/rubik": "^4.5.11",
-    "@nanostores/react": "^0.4.0",
     "@prisma/client": "^4.5.0",
-    "@remix-run/express": "^1.7.5",
     "@remix-run/node": "^1.7.4",
     "@remix-run/react": "^1.7.4",
+    "@remix-run/serve": "^1.7.4",
     "@supabase/supabase-js": "^2.0.4",
     "ariakit": "2.0.0-next.41",
     "chalk": "^5.1.2",
     "clsx": "^1.2.1",
-    "compression": "^1.7.4",
     "cuid": "^2.1.8",
     "dotenv": "^16.0.3",
     "execa": "^6.1.0",
-    "express": "^4.18.2",
-    "immer": "^9.0.16",
     "lucide-react": "^0.95.0",
-    "morgan": "^1.10.0",
-    "nanostores": "^0.7.0",
     "node-cron": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -50,21 +43,15 @@
     "react-mosaic-component": "^5.3.0",
     "react-virtuoso": "^3.1.1",
     "routes-gen": "^0.5.2",
-    "socket.io": "^4.5.3",
-    "socket.io-client": "^4.5.3",
     "use-sync-external-store": "^1.2.0",
     "zod": "^3.19.1"
   },
   "devDependencies": {
     "@itsmapleleaf/configs": "^1.1.5",
     "@remix-run/dev": "^1.7.4",
-    "@remix-run/serve": "^1.7.4",
     "@routes-gen/remix": "^0.3.5",
     "@rushstack/eslint-patch": "^1.2.0",
-    "@types/compression": "^1.7.2",
     "@types/eslint": "^8.4.8",
-    "@types/express": "^4.17.14",
-    "@types/morgan": "^1.9.3",
     "@types/node": "^18.11.7",
     "@types/node-cron": "^3.0.5",
     "@types/react": "^18.0.24",
@@ -81,8 +68,7 @@
     "remix-flat-routes": "^0.4.4",
     "tailwindcss": "^3.2.1",
     "tsx": "^3.11.0",
-    "typescript": "4.9.1-beta",
-    "wait-on": "^6.0.1"
+    "typescript": "4.9.1-beta"
   },
   "prettier": "@itsmapleleaf/configs/prettier"
 }
