--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-expanding-textarea": "^2.3.6",
     "react-mosaic-component": "^5.3.0",
     "react-virtuoso": "^3.1.3",
+    "reconnecting-eventsource": "^1.6.2",
     "routes-gen": "^0.5.2",
     "use-sync-external-store": "^1.2.0",
     "zod": "^3.19.1"
