--- a/package.json
+++ b/package.json
@@ -25,23 +25,23 @@
   "dependencies": {
     "@fontsource/rubik": "^4.5.11",
     "@prisma/client": "^4.6.1",
-    "@remix-run/node": "^1.7.5",
-    "@remix-run/react": "^1.7.5",
-    "@remix-run/serve": "^1.7.5",
-    "@supabase/supabase-js": "^2.0.6",
+    "@remix-run/node": "^1.7.6",
+    "@remix-run/react": "^1.7.6",
+    "@remix-run/serve": "^1.7.6",
+    "@supabase/supabase-js": "^2.1.0",
     "ariakit": "2.0.0-next.41",
     "chalk": "^5.1.2",
     "clsx": "^1.2.1",
     "cuid": "^2.1.8",
     "dotenv": "^16.0.3",
     "execa": "^6.1.0",
-    "lucide-react": "^0.100.0",
+    "lucide-react": "^0.101.0",
     "node-cron": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-expanding-textarea": "^2.3.6",
     "react-mosaic-component": "^5.3.0",
-    "react-virtuoso": "^3.1.3",
+    "react-virtuoso": "^3.1.4",
     "reconnecting-eventsource": "^1.6.2",
     "routes-gen": "^0.5.2",
     "use-sync-external-store": "^1.2.0",
@@ -49,27 +49,27 @@
   },
   "devDependencies": {
     "@itsmapleleaf/configs": "^1.1.5",
-    "@remix-run/dev": "^1.7.5",
+    "@remix-run/dev": "^1.7.6",
     "@routes-gen/remix": "^0.3.5",
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/eslint": "^8.4.10",
     "@types/node": "^18.11.9",
-    "@types/node-cron": "^3.0.5",
+    "@types/node-cron": "^3.0.6",
     "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.8",
+    "@types/react-dom": "^18.0.9",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
     "depcheck": "^1.4.3",
-    "eslint": "^8.27.0",
-    "eslint-plugin-tailwindcss": "^3.6.2",
+    "eslint": "^8.28.0",
+    "eslint-plugin-tailwindcss": "^3.7.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "prisma": "^4.6.1",
     "prop-types": "^15.8.1",
     "remix-flat-routes": "^0.4.8",
-    "tailwindcss": "^3.2.3",
-    "tsx": "^3.12.0",
-    "typescript": "4.9.1-beta"
+    "tailwindcss": "^3.2.4",
+    "tsx": "^3.12.1",
+    "typescript": "4.9.3"
   },
   "prettier": "@itsmapleleaf/configs/prettier"
 }
