--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cuid": "^2.1.8",
     "dotenv": "^16.0.3",
     "execa": "^6.1.0",
+    "immer": "^9.0.16",
     "lucide-react": "^0.101.0",
     "node-cron": "^3.0.2",
     "react": "^18.2.0",
