--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "@remix-run/serve": "^1.7.6",
     "@supabase/supabase-js": "^2.1.0",
     "ariakit": "2.0.0-next.41",
+    "bundle-require": "^3.1.2",
     "chalk": "^5.1.2",
     "clsx": "^1.2.1",
     "cuid": "^2.1.8",
     "dotenv": "^16.0.3",
     "execa": "^6.1.0",
+    "fast-glob": "^3.2.12",
     "immer": "^9.0.16",
     "lucide-react": "^0.101.0",
     "node-cron": "^3.0.2",
