--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "tailwind": "tailwindcss -i ./styles/app.css -o app/styles/app.css"
   },
   "dependencies": {
+    "@fontsource/rubik": "^4.5.13",
     "@remix-run/node": "^1.9.0",
     "@remix-run/react": "^1.9.0",
     "@remix-run/vercel": "^1.9.0",
     "@vercel/node": "^2.8.2",
+    "clsx": "^1.2.1",
+    "lucide-react": "0.105.0-alpha.4",
+    "mime-types": "^2.1.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -21,6 +25,8 @@
     "@remix-run/dev": "^1.9.0",
     "@remix-run/eslint-config": "^1.9.0",
     "@remix-run/serve": "^1.9.0",
+    "@types/mime-types": "^2.1.1",
+    "@types/node": "^18.11.17",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "autoprefixer": "^10.4.13",
