--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
+    "prepare": "cpy \"node_modules/@fontsource/rubik/**/{variable.css,*-variable-wghtOnly-normal.woff2}\" \"public/fonts/rubik\"",
     "dev": "run-p --print-label --race dev:*",
     "dev:remix": "remix dev",
     "dev:tailwind": "pnpm tailwind --watch",
@@ -30,6 +31,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "autoprefixer": "^10.4.13",
+    "cpy-cli": "^4.2.0",
     "eslint": "^8.30.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.20",
