--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@remix-run/vercel": "^1.9.0",
     "@vercel/node": "^2.8.2",
     "clsx": "^1.2.1",
+    "date-fns": "^2.29.3",
     "lucide-react": "0.105.0-alpha.4",
     "mime-types": "^2.1.35",
     "react": "^18.2.0",
