--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "autoprefixer": "^10.4.13",
     "cpy-cli": "^4.2.0",
     "eslint": "^8.30.0",
+    "eslint-plugin-tailwindcss": "^3.7.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.20",
     "prettier": "^2.8.1",
