--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
   "private": true,
   "sideEffects": false,
   "scripts": {
-    "prepare": "cpy \"node_modules/@fontsource/rubik/**/{variable.css,*-variable-wghtOnly-normal.woff2}\" \"public/fonts/rubik\"",
+    "prepare": "pnpm copy-fonts && pnpm prisma-generate",
     "dev": "run-p --print-label --race dev:*",
     "dev:remix": "remix dev",
     "dev:tailwind": "pnpm tailwind --watch",
-    "build": "pnpm tailwind --minify && remix build",
+    "build": "pnpm copy-fonts && pnpm tailwind --minify && remix build",
     "typecheck": "tsc -b",
-    "tailwind": "tailwindcss -i ./styles/app.css -o app/styles/app.css"
+    "tailwind": "tailwindcss -i ./styles/app.css -o app/styles/app.css",
+    "copy-fonts": "cpy \"node_modules/@fontsource/rubik/**/{variable.css,*-variable-wghtOnly-normal.woff2}\" \"public/fonts/rubik\"",
+    "prisma-generate": "prisma generate"
   },
   "dependencies": {
     "@fontsource/rubik": "^4.5.13",
+    "@prisma/client": "^4.8.0",
     "@remix-run/node": "^1.9.0",
     "@remix-run/react": "^1.9.0",
     "@remix-run/vercel": "^1.9.0",
@@ -38,6 +41,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.20",
     "prettier": "^2.8.1",
+    "prisma": "^4.8.0",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.4"
   }
