--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@remix-run/react": "^1.9.0",
     "@remix-run/vercel": "^1.9.0",
     "@vercel/node": "^2.8.2",
+    "ariakit": "2.0.0-next.42",
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
     "lucide-react": "0.105.0-alpha.4",
