--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "lucide-react": "0.105.0-alpha.4",
     "mime-types": "^2.1.35",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "remix-auth": "^3.4.0",
+    "remix-auth-discord": "^1.1.2",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.9.0",
