remove extra copy fonts step

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "run-p --print-label --race dev:*",
     "dev:remix": "remix dev",
     "dev:tailwind": "pnpm tailwind --watch",
-    "build": "pnpm copy-fonts && pnpm tailwind --minify && remix build",
+    "build": "pnpm tailwind --minify && remix build",
     "typecheck": "tsc -b",
     "tailwind": "tailwindcss -o app/generated/tailwind.css",
     "copy-fonts": "cpy \"node_modules/@fontsource/rubik/**/{variable.css,*-variable-wghtOnly-normal.woff2}\" \"public/fonts/rubik\"",
