--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-dom": "^18.2.0",
     "remix-auth": "^3.4.0",
     "remix-auth-discord": "^1.1.2",
-    "zod": "^3.20.2"
+    "zod": "^3.20.2",
+    "zod-form-data": "^1.2.4"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.9.0",
