--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "date-fns": "^2.29.3",
     "lucide-react": "0.105.0-alpha.4",
     "mime-types": "^2.1.35",
+    "pusher": "^5.1.2",
+    "pusher-js": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "remix-auth": "^3.4.0",
