add convex, use it for storing users

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "run-p --print-label --race dev:*",
     "dev:remix": "remix dev",
     "dev:tailwind": "pnpm tailwind --watch",
-    "build": "pnpm tailwind --minify && remix build",
+    "dev:convex": "convex dev",
+    "build": "pnpm tailwind --minify && remix build && convex deploy",
     "lint": "run-p --print-label lint:*",
     "lint:eslint": "eslint .",
     "lint:prettier": "prettier --check .",
@@ -25,6 +26,7 @@
     "@vercel/node": "^2.8.2",
     "ariakit": "2.0.0-next.42",
     "clsx": "^1.2.1",
+    "convex": "^0.6.0",
     "date-fns": "^2.29.3",
     "lucide-react": "0.105.0-alpha.4",
     "mime-types": "^2.1.35",
