simplify style imports with nightly features

--- a/package.json
+++ b/package.json
@@ -9,15 +9,13 @@
     "clean": "del-cli build public/build .cache",
     "dev": "pnpm clean && cross-env NODE_ENV=development run-p --race dev:*",
     "dev:remix": "remix dev --sourcemap",
-    "dev:tailwind": "pnpm run tailwind --watch",
     "dev:routes": "pnpm run routes --watch",
-    "build": "pnpm clean && tsc --noEmit && pnpm run tailwind --minify && pnpm run routes && remix build",
+    "build": "pnpm clean && tsc --noEmit --minify && pnpm run routes && remix build",
     "start": "cross-env NODE_ENV=production remix-serve build",
     "lint": "eslint --ext js,ts,tsx,astro .",
     "lint-fix": "pnpm lint --fix",
     "format": "prettier --write .",
     "typecheck": "tsc --noEmit",
-    "tailwind": "tailwindcss -i styles/styles.css -o generated/styles.css -c tailwind.config.cjs",
     "routes": "routes-gen --driver @routes-gen/remix",
     "env-check": "tsx app/core/env.server.ts",
     "unused-deps": "depcheck"
@@ -25,9 +23,9 @@
   "dependencies": {
     "@fontsource/rubik": "^4.5.14",
     "@prisma/client": "^4.10.1",
-    "@remix-run/node": "^1.12.0",
-    "@remix-run/react": "^1.12.0",
-    "@remix-run/serve": "^1.12.0",
+    "@remix-run/node": "nightly",
+    "@remix-run/react": "nightly",
+    "@remix-run/serve": "nightly",
     "@supabase/supabase-js": "^2.7.1",
     "ariakit": "2.0.0-next.43",
     "bundle-require": "^4.0.1",
@@ -53,7 +51,7 @@
   },
   "devDependencies": {
     "@itsmapleleaf/configs": "^1.1.5",
-    "@remix-run/dev": "^1.12.0",
+    "@remix-run/dev": "nightly",
     "@routes-gen/remix": "^0.3.6",
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/eslint": "^8.21.0",
