lock remix versions
a windows-specific build bug slipped in, lol

--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "@liveblocks/node": "^1.0.0",
     "@liveblocks/react": "^1.0.0",
     "@prisma/client": "^4.10.1",
-    "@remix-run/node": "nightly",
-    "@remix-run/react": "nightly",
-    "@remix-run/serve": "nightly",
+    "@remix-run/node": "0.0.0-nightly-ba4dba9-20230210",
+    "@remix-run/react": "0.0.0-nightly-ba4dba9-20230210",
+    "@remix-run/serve": "0.0.0-nightly-ba4dba9-20230210",
     "@supabase/supabase-js": "^2.7.1",
     "ariakit": "2.0.0-next.43",
     "bundle-require": "^4.0.1",
@@ -54,7 +54,7 @@
   },
   "devDependencies": {
     "@itsmapleleaf/configs": "^1.1.5",
-    "@remix-run/dev": "nightly",
+    "@remix-run/dev": "0.0.0-nightly-ba4dba9-20230210",
     "@routes-gen/remix": "^0.3.6",
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/eslint": "^8.21.0",
