--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@fontsource/rubik": "^4.5.14",
+    "@formkit/auto-animate": "1.0.0-beta.6",
     "@liveblocks/client": "^1.0.0",
     "@liveblocks/node": "^1.0.0",
     "@liveblocks/react": "^1.0.0",
