--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "sideEffects": false,
   "engines": {
-    "node": ">=16"
+    "node": "18"
   },
   "scripts": {
     "prepare": "prisma generate",
