--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "@liveblocks/node": "^1.0.0",
     "@liveblocks/react": "^1.0.0",
     "@prisma/client": "^4.10.1",
-    "@remix-run/node": "0.0.0-nightly-ba4dba9-20230210",
-    "@remix-run/react": "0.0.0-nightly-ba4dba9-20230210",
-    "@remix-run/vercel": "0.0.0-nightly-ba4dba9-20230210",
+    "@remix-run/node": "nightly",
+    "@remix-run/react": "nightly",
+    "@remix-run/vercel": "nightly",
     "@supabase/supabase-js": "^2.7.1",
     "@vercel/node": "^2.9.2",
     "ariakit": "2.0.0-next.43",
@@ -56,8 +56,8 @@
   },
   "devDependencies": {
     "@itsmapleleaf/configs": "^1.1.5",
-    "@remix-run/dev": "0.0.0-nightly-ba4dba9-20230210",
-    "@remix-run/serve": "0.0.0-nightly-ba4dba9-20230210",
+    "@remix-run/dev": "nightly",
+    "@remix-run/serve": "nightly",
     "@routes-gen/remix": "^0.3.6",
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/eslint": "^8.21.0",
