--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "execa": "^6.1.0",
     "fast-glob": "^3.2.12",
     "immer": "^9.0.19",
+    "inngest": "^1.0.0",
     "lucide-react": "^0.112.0",
     "node-cron": "^3.0.2",
+    "pretty-bytes": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-expanding-textarea": "^2.3.6",
