--- a/.depcheckrc.json
+++ b/.depcheckrc.json
@@ -7,13 +7,10 @@
     "**/*.tsx": "typescript"
   },
   "ignores": [
-    "@fontsource/rubik",
-    "@prisma/client",
-    "use-sync-external-store",
-    "eslint-plugin-tailwindcss",
     "@routes-gen/remix",
     "@types/eslint",
-    "@types/node-cron",
-    "@itsmapleleaf/configs/prettier"
+    "eslint-plugin-tailwindcss",
+    "@itsmapleleaf/configs/prettier",
+    "~"
   ]
 }
