--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
     "@liveblocks/node": "^1.0.0",
     "@liveblocks/react": "^1.0.0",
     "@prisma/client": "^4.10.1",
-    "@remix-run/node": "0.0.0-nightly-ba4dba9-20230210",
-    "@remix-run/react": "0.0.0-nightly-ba4dba9-20230210",
-    "@remix-run/vercel": "0.0.0-nightly-ba4dba9-20230210",
-    "@vercel/node": "^2.9.2",
+    "@remix-run/node": "^1.13.0",
+    "@remix-run/react": "^1.13.0",
+    "@remix-run/vercel": "^1.13.0",
+    "@vercel/node": "^2.9.4",
     "ariakit": "2.0.0-next.43",
     "clsx": "^1.2.1",
     "cuid": "^3.0.0",
-    "inngest": "^1.0.0",
-    "lucide-react": "^0.112.0",
+    "inngest": "^1.1.0",
+    "lucide-react": "^0.114.0",
     "pretty-bytes": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -48,14 +48,14 @@
   },
   "devDependencies": {
     "@itsmapleleaf/configs": "^1.1.5",
-    "@remix-run/dev": "0.0.0-nightly-ba4dba9-20230210",
-    "@remix-run/serve": "0.0.0-nightly-ba4dba9-20230210",
+    "@remix-run/dev": "^1.13.0",
+    "@remix-run/serve": "^1.13.0",
     "@routes-gen/remix": "^0.3.6",
     "@rushstack/eslint-patch": "^1.2.0",
-    "@types/eslint": "^8.21.0",
+    "@types/eslint": "^8.21.1",
     "@types/node": "^18.13.0",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
     "depcheck": "^1.4.3",
