--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "scripts": {
     "prepare": "prisma generate",
     "clean": "del-cli build public/build .cache api",
-    "dev": "pnpm clean && cross-env NODE_ENV=development run-p --race dev:*",
-    "dev:remix": "remix dev --sourcemap",
+    "dev": "cross-env NODE_ENV=development run-p --race dev:*",
+    "dev:remix": "remix dev",
+    "dev:server": "wait-on file:build && cross-env NODE_ENV=development nodemon -w build server.dev.mjs",
     "dev:routes": "pnpm run routes --watch",
     "build": "pnpm run routes && remix build",
     "start": "cross-env NODE_ENV=production remix-serve build",
@@ -27,9 +28,9 @@
     "@liveblocks/node": "^1.0.0",
     "@liveblocks/react": "^1.0.0",
     "@prisma/client": "^4.10.1",
-    "@remix-run/node": "^1.13.0",
-    "@remix-run/react": "^1.13.0",
-    "@remix-run/vercel": "^1.13.0",
+    "@remix-run/node": "0.0.0-experimental-0ec995c53",
+    "@remix-run/react": "0.0.0-experimental-0ec995c53",
+    "@remix-run/vercel": "0.0.0-experimental-0ec995c53",
     "@vercel/node": "^2.9.4",
     "ariakit": "2.0.0-next.43",
     "clsx": "^1.2.1",
@@ -48,11 +49,13 @@
   },
   "devDependencies": {
     "@itsmapleleaf/configs": "^1.1.5",
-    "@remix-run/dev": "^1.13.0",
-    "@remix-run/serve": "^1.13.0",
+    "@remix-run/dev": "0.0.0-experimental-0ec995c53",
+    "@remix-run/express": "0.0.0-experimental-0ec995c53",
+    "@remix-run/serve": "0.0.0-experimental-0ec995c53",
     "@routes-gen/remix": "^0.3.6",
     "@rushstack/eslint-patch": "^1.2.0",
     "@types/eslint": "^8.21.1",
+    "@types/express": "^4.17.17",
     "@types/node": "^18.13.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
@@ -61,12 +64,21 @@
     "depcheck": "^1.4.3",
     "eslint": "^8.34.0",
     "eslint-plugin-tailwindcss": "^3.8.3",
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.4",
     "prisma": "^4.10.1",
+    "react-refresh": "^0.14.0",
     "tailwindcss": "^3.2.6",
     "tsx": "^3.12.3",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "wait-on": "^7.0.1"
   },
-  "prettier": "@itsmapleleaf/configs/prettier"
+  "prettier": "@itsmapleleaf/configs/prettier",
+  "pnpm": {
+    "patchedDependencies": {
+      "@remix-run/dev@0.0.0-experimental-0ec995c53": "patches/@remix-run__dev@0.0.0-experimental-0ec995c53.patch"
+    }
+  }
 }
