--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@remix-run/serve": "0.0.0-experimental-0ec995c53",
     "@routes-gen/remix": "^0.3.6",
     "@rushstack/eslint-patch": "^1.2.0",
+    "@tailwindcss/container-queries": "^0.1.0",
     "@types/eslint": "^8.21.1",
     "@types/express": "^4.17.17",
     "@types/node": "^18.13.0",
