make some things nicer with cva

--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "@remix-run/vercel": "0.0.0-experimental-0ec995c53",
     "@vercel/node": "^2.9.4",
     "ariakit": "2.0.0-next.43",
+    "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "cuid": "^3.0.0",
+    "date-fns": "^2.29.3",
     "inngest": "^1.1.0",
     "lucide-react": "^0.114.0",
     "pretty-bytes": "^6.1.0",
