--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "unused-deps": "depcheck"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.8",
+    "@dnd-kit/sortable": "^7.0.2",
+    "@dnd-kit/utilities": "^3.2.1",
     "@fontsource/rubik": "^4.5.14",
     "@formkit/auto-animate": "1.0.0-beta.6",
     "@liveblocks/client": "^1.0.0",
