--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
     "@liveblocks/react": "^1.0.0",
     "@prisma/client": "^4.10.1",
     "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-dialog": "^1.0.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.3",
+    "@radix-ui/react-portal": "^1.0.1",
     "@remix-run/node": "0.0.0-experimental-0ec995c53",
     "@remix-run/react": "0.0.0-experimental-0ec995c53",
     "@remix-run/vercel": "0.0.0-experimental-0ec995c53",
     "@vercel/node": "^2.9.4",
-    "ariakit": "2.0.0-next.43",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "cuid": "^3.0.0",
