--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "dev:remix": "remix dev",
     "dev:server": "wait-on file:build && cross-env NODE_ENV=development nodemon -w build server.dev.mjs",
     "dev:routes": "pnpm run routes --watch",
-    "build": "pnpm run routes && remix build",
+    "build": "remix build",
     "start": "cross-env NODE_ENV=production remix-serve build",
     "lint": "eslint --ext js,ts,tsx,astro .",
     "lint-fix": "pnpm lint --fix",
     "format": "prettier --write .",
-    "typecheck": "tsc --noEmit",
+    "typecheck": "pnpm run routes && tsc --noEmit",
     "routes": "routes-gen --driver @routes-gen/remix",
     "env-check": "tsx app/core/env.server.ts",
     "unused-deps": "depcheck"
