--- a/package.json
+++ b/package.json
@@ -85,10 +85,5 @@
     "typescript": "4.9.5",
     "wait-on": "^7.0.1"
   },
-  "prettier": "@itsmapleleaf/configs/prettier",
-  "pnpm": {
-    "patchedDependencies": {
-      "@remix-run/dev@0.0.0-experimental-0ec995c53": "patches/@remix-run__dev@0.0.0-experimental-0ec995c53.patch"
-    }
-  }
+  "prettier": "@itsmapleleaf/configs/prettier"
 }
