--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "@itsmapleleaf/configs/tsconfig.base",
   "compilerOptions": {
     "jsx": "react-jsx",
-    "baseUrl": null,
+    "baseUrl": ".",
     "paths": {
       "~/*": ["./app/*"]
     }
