--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@remix-run/node": "0.0.0-nightly-dc98a6b-20230223",
     "@remix-run/react": "0.0.0-nightly-dc98a6b-20230223",
     "@remix-run/vercel": "0.0.0-nightly-dc98a6b-20230223",
+    "@remix-validated-form/with-zod": "^2.0.5",
     "@vercel/node": "^2.9.8",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
@@ -52,6 +53,7 @@
     "react-expanding-textarea": "^2.3.6",
     "react-mosaic-component": "^5.3.0",
     "react-virtuoso": "^4.1.0",
+    "remix-validated-form": "^4.6.9",
     "routes-gen": "^0.6.0",
     "zod": "^3.20.6",
     "zod-form-data": "^2.0.0"
