--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.3",
     "@radix-ui/react-popover": "^1.0.4",
+    "@radix-ui/react-select": "^1.2.0",
     "@remix-run/node": "0.0.0-nightly-dc98a6b-20230223",
     "@remix-run/react": "0.0.0-nightly-dc98a6b-20230223",
     "@remix-run/vercel": "0.0.0-nightly-dc98a6b-20230223",
@@ -44,9 +45,11 @@
     "clsx": "^1.2.1",
     "cuid": "^3.0.0",
     "date-fns": "^2.29.3",
+    "downshift": "^7.2.1",
     "framer-motion": "^10.0.1",
     "inngest": "^1.3.1",
     "lucide-react": "^0.118.0",
+    "match-sorter": "^6.3.1",
     "pretty-bytes": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
