--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.3",
     "@radix-ui/react-popover": "^1.0.4",
-    "@radix-ui/react-select": "^1.2.0",
     "@remix-run/node": "0.0.0-nightly-dc98a6b-20230223",
     "@remix-run/react": "0.0.0-nightly-dc98a6b-20230223",
     "@remix-run/vercel": "0.0.0-nightly-dc98a6b-20230223",
@@ -45,7 +44,6 @@
     "clsx": "^1.2.1",
     "cuid": "^3.0.0",
     "date-fns": "^2.29.3",
-    "downshift": "^7.2.1",
     "framer-motion": "^10.0.1",
     "inngest": "^1.3.1",
     "lucide-react": "^0.118.0",
@@ -54,12 +52,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-expanding-textarea": "^2.3.6",
-    "react-mosaic-component": "^5.3.0",
     "react-virtuoso": "^4.1.0",
     "remix-validated-form": "^4.6.9",
     "routes-gen": "^0.6.0",
-    "zod": "^3.20.6",
-    "zod-form-data": "^2.0.0"
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "@itsmapleleaf/configs": "^1.1.5",
