--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
   },
   "scripts": {
     "prepare": "prisma generate",
-    "clean": "del-cli build public/build .cache api",
+    "clean": "del-cli build public/build .cache",
     "dev": "cross-env NODE_ENV=development run-p --race dev:*",
     "dev:remix": "remix dev",
     "dev:server": "wait-on file:build && cross-env NODE_ENV=development nodemon -w build server.dev.mjs",
     "dev:routes": "pnpm run routes --watch",
-    "build": "cross-env NODE_ENV=production remix build",
-    "start": "cross-env NODE_ENV=production remix-serve build",
-    "lint": "eslint --ext js,ts,tsx,astro .",
+    "build": "remix build",
+    "start": "remix-serve build",
+    "lint": "eslint --ext js,ts,tsx .",
     "lint-fix": "pnpm lint --fix",
     "format": "prettier --write .",
     "typecheck": "pnpm run routes && tsc --noEmit",
@@ -32,58 +32,57 @@
     "@liveblocks/react": "^1.0.1",
     "@prisma/client": "^4.11.0",
     "@radix-ui/colors": "^0.1.8",
-    "@radix-ui/react-dialog": "^1.0.2",
-    "@radix-ui/react-dropdown-menu": "^2.0.3",
-    "@radix-ui/react-popover": "^1.0.4",
-    "@remix-run/node": "0.0.0-nightly-dc98a6b-20230223",
-    "@remix-run/react": "0.0.0-nightly-dc98a6b-20230223",
-    "@remix-run/vercel": "0.0.0-nightly-dc98a6b-20230223",
+    "@radix-ui/react-dialog": "^1.0.3",
+    "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@radix-ui/react-popover": "^1.0.5",
+    "@remix-run/react": "1.14.3",
+    "@remix-run/server-runtime": "^1.14.3",
     "@remix-validated-form/with-zod": "^2.0.5",
-    "@vercel/node": "^2.9.10",
+    "@vercel/remix": "1.14.3-patch.1",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
     "cuid": "^3.0.0",
     "date-fns": "^2.29.3",
-    "framer-motion": "^10.0.1",
-    "inngest": "^1.3.1",
-    "lucide-react": "^0.118.0",
+    "framer-motion": "^10.9.1",
+    "inngest": "^1.5.1",
+    "lucide-react": "^0.127.0",
     "match-sorter": "^6.3.1",
     "pretty-bytes": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-expanding-textarea": "^2.3.6",
     "react-virtuoso": "^4.1.0",
-    "remix-validated-form": "^4.6.9",
+    "remix-validated-form": "^4.6.10",
     "routes-gen": "^0.6.0",
-    "zod": "^3.20.6"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@itsmapleleaf/configs": "^1.1.5",
-    "@remix-run/dev": "0.0.0-nightly-dc98a6b-20230223",
-    "@remix-run/express": "0.0.0-nightly-dc98a6b-20230223",
-    "@remix-run/serve": "0.0.0-nightly-dc98a6b-20230223",
+    "@itsmapleleaf/configs": "^1.1.7",
+    "@remix-run/dev": "1.14.3",
+    "@remix-run/express": "1.14.3",
+    "@remix-run/serve": "1.14.3",
     "@routes-gen/remix": "^0.3.6",
     "@rushstack/eslint-patch": "^1.2.0",
     "@tailwindcss/container-queries": "^0.1.0",
-    "@types/eslint": "^8.21.1",
+    "@types/eslint": "^8.21.3",
     "@types/express": "^4.17.17",
-    "@types/node": "^18.14.2",
-    "@types/react": "^18.0.28",
+    "@types/node": "^18.15.9",
+    "@types/react": "^18.0.29",
     "@types/react-dom": "^18.0.11",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
     "depcheck": "^1.4.3",
-    "eslint": "^8.35.0",
-    "eslint-plugin-tailwindcss": "^3.10.0",
+    "eslint": "^8.36.0",
+    "eslint-plugin-tailwindcss": "^3.10.1",
     "express": "^4.18.2",
-    "nodemon": "^2.0.20",
+    "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.4",
+    "prettier": "^2.8.7",
     "prisma": "^4.11.0",
     "react-refresh": "^0.14.0",
     "tailwindcss": "^3.2.7",
-    "tsx": "^3.12.3",
-    "typescript": "4.9.5",
+    "tsx": "^3.12.6",
+    "typescript": "5.0.2",
     "wait-on": "^7.0.1"
   },
   "prettier": "@itsmapleleaf/configs/prettier"
