--- a/package.json
+++ b/package.json
@@ -77,12 +77,12 @@
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.7",
+    "prettier-plugin-tailwindcss": "^0.2.6",
     "prisma": "^4.11.0",
     "react-refresh": "^0.14.0",
     "tailwindcss": "^3.2.7",
     "tsx": "^3.12.6",
     "typescript": "5.0.2",
     "wait-on": "^7.0.1"
-  },
-  "prettier": "@itsmapleleaf/configs/prettier"
+  }
 }
