--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "dev:routes": "pnpm run routes --watch",
     "build": "remix build",
     "start": "remix-serve build",
-    "lint": "eslint --ext js,ts,tsx .",
-    "lint-fix": "pnpm lint --fix",
-    "format": "prettier --write .",
-    "typecheck": "pnpm run routes && tsc --noEmit",
+    "lint": "pnpm run routes && run-s --continue-on-error lint:*",
+    "lint:tsc": "tsc -b",
+    "lint:eslint": "eslint --ext js,ts,tsx .",
+    "format": "pnpm run routes && run-s --continue-on-error format:*",
+    "format:eslint": "eslint --ext js,ts,tsx . --fix",
+    "format:prettier": "prettier --write .",
     "routes": "routes-gen --driver @routes-gen/remix",
     "env-check": "tsx app/core/env.server.ts",
     "unused-deps": "depcheck"
@@ -26,63 +28,63 @@
     "@dnd-kit/utilities": "^3.2.1",
     "@fontsource/rubik": "^4.5.14",
     "@formkit/auto-animate": "1.0.0-beta.6",
-    "@liveblocks/client": "^1.0.1",
-    "@liveblocks/node": "^1.0.1",
-    "@liveblocks/react": "^1.0.1",
-    "@prisma/client": "^4.11.0",
+    "@liveblocks/client": "^1.0.2",
+    "@liveblocks/node": "^1.0.2",
+    "@liveblocks/react": "^1.0.2",
+    "@prisma/client": "^4.12.0",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-popover": "^1.0.5",
-    "@remix-run/react": "1.14.3",
-    "@remix-run/server-runtime": "^1.14.3",
+    "@remix-run/react": "1.15.0",
+    "@remix-run/server-runtime": "^1.15.0",
     "@remix-validated-form/with-zod": "^2.0.5",
-    "@vercel/remix": "1.14.3-patch.1",
-    "class-variance-authority": "^0.4.0",
+    "@vercel/remix": "1.15.0",
+    "class-variance-authority": "^0.5.1",
     "clsx": "^1.2.1",
     "cuid": "^3.0.0",
     "date-fns": "^2.29.3",
-    "framer-motion": "^10.9.1",
-    "inngest": "^1.5.1",
-    "lucide-react": "^0.127.0",
+    "framer-motion": "^10.11.2",
+    "inngest": "^1.6.0",
+    "lucide-react": "^0.130.1",
     "match-sorter": "^6.3.1",
     "pretty-bytes": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-expanding-textarea": "^2.3.6",
-    "react-virtuoso": "^4.1.0",
+    "react-virtuoso": "^4.2.0",
     "remix-validated-form": "^4.6.10",
     "routes-gen": "^0.6.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@itsmapleleaf/configs": "^1.1.7",
-    "@remix-run/dev": "1.14.3",
-    "@remix-run/express": "1.14.3",
-    "@remix-run/serve": "1.14.3",
+    "@itsmapleleaf/configs": "^2.0.0",
+    "@remix-run/dev": "1.15.0",
+    "@remix-run/express": "1.15.0",
+    "@remix-run/serve": "1.15.0",
     "@routes-gen/remix": "^0.3.6",
     "@rushstack/eslint-patch": "^1.2.0",
-    "@tailwindcss/container-queries": "^0.1.0",
-    "@types/eslint": "^8.21.3",
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@types/eslint": "^8.37.0",
     "@types/express": "^4.17.17",
-    "@types/node": "^18.15.9",
-    "@types/react": "^18.0.29",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
     "depcheck": "^1.4.3",
-    "eslint": "^8.36.0",
-    "eslint-plugin-tailwindcss": "^3.10.1",
+    "eslint": "^8.37.0",
+    "eslint-plugin-tailwindcss": "^3.11.0",
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.7",
-    "prettier-plugin-tailwindcss": "^0.2.6",
-    "prisma": "^4.11.0",
+    "prettier-plugin-tailwindcss": "^0.2.7",
+    "prisma": "^4.12.0",
     "react-refresh": "^0.14.0",
-    "tailwindcss": "^3.2.7",
+    "tailwindcss": "^3.3.1",
     "tsx": "^3.12.6",
-    "typescript": "5.0.2",
+    "typescript": "5.0.3",
     "wait-on": "^7.0.1"
   }
 }
