--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "match-sorter": "^6.3.1",
     "pretty-bytes": "^6.1.0",
     "react": "^18.2.0",
+    "react-aria-components": "1.0.0-alpha.3",
     "react-dom": "^18.2.0",
     "react-expanding-textarea": "^2.3.6",
     "react-virtuoso": "^4.2.0",
