--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-popover": "^1.0.5",
-    "@remix-run/react": "1.15.0",
+    "@remix-run/node": "^1.15.0",
+    "@remix-run/react": "^1.15.0",
     "@remix-run/server-runtime": "^1.15.0",
     "@remix-validated-form/with-zod": "^2.0.5",
     "@vercel/remix": "1.15.0",
@@ -46,6 +47,7 @@
     "date-fns": "^2.29.3",
     "framer-motion": "^10.11.2",
     "inngest": "^1.6.0",
+    "isbot": "latest",
     "lucide-react": "^0.130.1",
     "match-sorter": "^6.3.1",
     "pretty-bytes": "^6.1.0",
@@ -60,9 +62,9 @@
   },
   "devDependencies": {
     "@itsmapleleaf/configs": "^2.0.0",
-    "@remix-run/dev": "1.15.0",
-    "@remix-run/express": "1.15.0",
-    "@remix-run/serve": "1.15.0",
+    "@remix-run/dev": "^1.15.0",
+    "@remix-run/express": "^1.15.0",
+    "@remix-run/serve": "^1.15.0",
     "@routes-gen/remix": "^0.3.6",
     "@rushstack/eslint-patch": "^1.2.0",
     "@tailwindcss/container-queries": "^0.1.1",
