--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "@dnd-kit/utilities": "^3.2.1",
     "@fontsource/rubik": "^4.5.14",
     "@formkit/auto-animate": "1.0.0-beta.6",
-    "@liveblocks/client": "^1.0.2",
-    "@liveblocks/node": "^1.0.2",
-    "@liveblocks/react": "^1.0.2",
-    "@prisma/client": "^4.12.0",
+    "@liveblocks/client": "^1.0.6",
+    "@liveblocks/node": "^1.0.6",
+    "@liveblocks/react": "^1.0.6",
+    "@prisma/client": "^4.13.0",
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
@@ -41,27 +41,27 @@
     "@remix-run/server-runtime": "^1.15.0",
     "@remix-validated-form/with-zod": "^2.0.5",
     "@vercel/remix": "1.15.0",
-    "class-variance-authority": "^0.5.1",
+    "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "cuid": "^3.0.0",
     "date-fns": "^2.29.3",
-    "framer-motion": "^10.11.2",
-    "inngest": "^1.6.0",
-    "isbot": "latest",
-    "lucide-react": "^0.130.1",
+    "framer-motion": "^10.12.4",
+    "inngest": "^1.8.0",
+    "isbot": "^3.6.10",
+    "lucide-react": "^0.188.0",
     "match-sorter": "^6.3.1",
     "pretty-bytes": "^6.1.0",
     "react": "^18.2.0",
     "react-aria-components": "1.0.0-alpha.3",
     "react-dom": "^18.2.0",
     "react-expanding-textarea": "^2.3.6",
-    "react-virtuoso": "^4.2.0",
-    "remix-validated-form": "^4.6.10",
+    "react-virtuoso": "^4.3.2",
+    "remix-validated-form": "^4.6.11",
     "routes-gen": "^0.6.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@itsmapleleaf/configs": "^2.0.0",
+    "@itsmapleleaf/configs": "^3.0.0",
     "@remix-run/dev": "^1.15.0",
     "@remix-run/express": "^1.15.0",
     "@remix-run/serve": "^1.15.0",
@@ -70,24 +70,24 @@
     "@tailwindcss/container-queries": "^0.1.1",
     "@types/eslint": "^8.37.0",
     "@types/express": "^4.17.17",
-    "@types/node": "^18.15.11",
-    "@types/react": "^18.0.33",
-    "@types/react-dom": "^18.0.11",
+    "@types/node": "^18.16.3",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.1",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
     "depcheck": "^1.4.3",
-    "eslint": "^8.37.0",
+    "eslint": "^8.39.0",
     "eslint-plugin-tailwindcss": "^3.11.0",
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.7",
-    "prettier-plugin-tailwindcss": "^0.2.7",
-    "prisma": "^4.12.0",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.2.8",
+    "prisma": "^4.13.0",
     "react-refresh": "^0.14.0",
-    "tailwindcss": "^3.3.1",
+    "tailwindcss": "^3.3.2",
     "tsx": "^3.12.6",
-    "typescript": "5.0.3",
+    "typescript": "5.0.4",
     "wait-on": "^7.0.1"
   }
 }
