--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-popover": "^1.0.5",
     "@remix-run/node": "^1.15.0",
     "@remix-run/react": "^1.15.0",
+    "@remix-run/router": "^1.6.0",
     "@remix-run/server-runtime": "^1.15.0",
     "@remix-validated-form/with-zod": "^2.0.5",
     "@vercel/remix": "1.15.0",
