--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-virtuoso": "^4.3.2",
     "remix-validated-form": "^4.6.11",
     "routes-gen": "^0.6.0",
+    "spin-delay": "^1.2.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
