--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "remix-validated-form": "^4.6.11",
     "routes-gen": "^0.6.0",
     "spin-delay": "^1.2.0",
+    "tailwind-merge": "^1.12.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
