--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@remix-run/router": "^1.6.0",
     "@remix-run/server-runtime": "^1.15.0",
     "@remix-validated-form/with-zod": "^2.0.5",
+    "@unocss/reset": "^0.51.8",
     "@vercel/remix": "1.15.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
@@ -68,27 +69,27 @@
     "@remix-run/serve": "^1.15.0",
     "@routes-gen/remix": "^0.3.6",
     "@rushstack/eslint-patch": "^1.2.0",
-    "@tailwindcss/container-queries": "^0.1.1",
     "@types/eslint": "^8.37.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.16.3",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.1",
+    "@unocss/eslint-config": "^0.51.8",
+    "@unocss/postcss": "^0.51.8",
+    "@unocss/preset-mini": "^0.51.8",
     "cross-env": "^7.0.3",
     "del-cli": "^5.0.0",
     "depcheck": "^1.4.3",
     "eslint": "^8.39.0",
-    "eslint-plugin-tailwindcss": "^3.11.0",
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.8",
-    "prettier-plugin-tailwindcss": "^0.2.8",
     "prisma": "^4.13.0",
     "react-refresh": "^0.14.0",
-    "tailwindcss": "^3.3.2",
     "tsx": "^3.12.6",
     "typescript": "5.0.4",
+    "unocss": "^0.51.8",
     "wait-on": "^7.0.1"
   }
 }
