--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "isbot": "^3.6.10",
     "lucide-react": "^0.192.0",
     "match-sorter": "^6.3.1",
+    "polished": "^4.2.2",
     "pretty-bytes": "^6.1.0",
     "react": "^18.2.0",
     "react-aria-components": "1.0.0-alpha.3",
