--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react": "^18.2.0",
     "react-aria-components": "1.0.0-alpha.3",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.4",
     "react-expanding-textarea": "^2.3.6",
     "react-virtuoso": "^4.3.4",
     "remix-validated-form": "^4.6.11",
