--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.23",
     "prettier": "^2.8.8",
     "prisma": "^4.13.0",
     "react-refresh": "^0.14.0",
