--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@remix-run/serve": "1.16.1-pre.0",
     "@routes-gen/remix": "^0.3.6",
     "@rushstack/eslint-patch": "^1.2.0",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@types/eslint": "^8.37.0",
     "@types/express": "^4.17.17",
     "@types/node": "^20.1.3",
