add convex codegen to setup

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "node": "18"
   },
   "scripts": {
-    "setup": "panda codegen && remix-routes",
+    "setup": "panda codegen && remix-routes && convex codegen",
     "dev": "pnpm run --parallel /^dev:/",
     "dev:remix": "remix dev",
     "dev:routes": "remix-routes --watch",
