--- a/package.json
+++ b/package.json
@@ -44,11 +44,15 @@
     "@pandacss/dev": "^0.7.0",
     "@pandacss/preset-panda": "^0.7.0",
     "@remix-run/dev": "^1.19.1",
-    "@remix-run/eslint-config": "^1.19.1",
+    "@types/eslint": "^8.44.1",
     "@types/node": "^20.4.4",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^6.2.0",
+    "@typescript-eslint/parser": "^6.2.0",
     "eslint": "^8.45.0",
+    "eslint-plugin-react": "^7.33.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "knip": "^2.16.1",
     "prettier": "^3.0.0",
     "typescript": "5.2.0-beta"
