rendering in vite

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,10 @@
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "jsx": "react-jsx",
-    "baseUrl": ".",
     "paths": {
-      "~/*": ["./app/*"]
+      "~/*": ["./app/*"],
+      "convex/*": ["./convex/*"],
+      "styled-system/*": ["./styled-system/*"]
     }
   },
   "exclude": ["node_modules", "dist", "public/dist"]
