--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
     "node": "18"
   },
   "scripts": {
-    "setup": "panda codegen && remix-routes && convex codegen",
+    "setup": "panda codegen && convex codegen",
     "dev": "pnpm run --parallel /^dev:/",
-    "dev:remix": "remix dev",
-    "dev:routes": "remix-routes --watch",
+    "dev:vite": "vite dev",
     "dev:convex": "convex dev",
-    "build": "remix build",
-    "start": "remix-serve build",
+    "build": "vite build",
+    "start": "vite preview",
     "lint": "pnpm run --parallel /^lint:/",
     "lint:tsc": "tsc -b",
     "lint:eslint": "eslint .",
@@ -28,12 +27,15 @@
     "@remix-run/css-bundle": "^1.19.1",
     "@remix-run/node": "^1.19.1",
     "@remix-run/react": "^1.19.1",
+    "@remix-run/router": "^1.7.2",
     "@remix-run/serve": "^1.19.1",
     "convex": "^1.0.2",
     "isbot": "^3.6.13",
     "lucide-react": "^0.263.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.10",
+    "react-router-dom": "^6.14.2",
     "react-virtuoso": "^4.4.2",
     "remix-routes": "^1.4.4",
     "spin-delay": "^1.2.0",
@@ -50,11 +52,14 @@
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
+    "@vitejs/plugin-react-swc": "^3.3.2",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "knip": "^2.16.1",
     "prettier": "^3.0.0",
-    "typescript": "5.2.0-beta"
+    "typescript": "5.2.0-beta",
+    "vite": "^4.4.7",
+    "vite-tsconfig-paths": "^4.2.0"
   }
 }
