--- a/package.json
+++ b/package.json
@@ -1,58 +1,59 @@
 {
-  "private": true,
-  "sideEffects": false,
-  "engines": {
-    "node": "18"
-  },
-  "scripts": {
-    "prepare": "panda codegen && convex codegen",
-    "dev": "pnpm run --parallel /^dev:/",
-    "dev:vite": "vite dev",
-    "dev:convex": "convex dev",
-    "build": "vite build",
-    "start": "vite preview",
-    "lint": "pnpm run --parallel --no-bail /^lint:/",
-    "lint:tsc": "tsc -b",
-    "lint:eslint": "eslint .",
-    "lint:knip": "knip",
-    "format": "pnpm run --sequential /^format:/",
-    "format:eslint": "eslint . --fix",
-    "format:prettier": "prettier --write ."
-  },
-  "dependencies": {
-    "@fontsource-variable/spline-sans": "^5.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.5",
-    "@radix-ui/react-popover": "^1.0.6",
-    "@radix-ui/react-tooltip": "^1.0.6",
-    "convex": "^1.0.2",
-    "lucide-react": "^0.263.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.10",
-    "react-router-dom": "^6.14.2",
-    "react-virtuoso": "^4.4.2",
-    "remix-routes": "^1.4.4",
-    "spin-delay": "^1.2.0",
-    "zod": "^3.21.4",
-    "zod-form-data": "^2.0.1"
-  },
-  "devDependencies": {
-    "@pandacss/dev": "^0.7.0",
-    "@pandacss/preset-panda": "^0.7.0",
-    "@types/eslint": "^8.44.1",
-    "@types/node": "^20.4.4",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^6.2.0",
-    "@typescript-eslint/parser": "^6.2.0",
-    "@vitejs/plugin-react-swc": "^3.3.2",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react": "^7.33.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "knip": "^2.16.1",
-    "prettier": "^3.0.0",
-    "typescript": "5.2.0-beta",
-    "vite": "^4.4.7",
-    "vite-tsconfig-paths": "^4.2.0"
-  }
+	"private": true,
+	"sideEffects": false,
+	"engines": {
+		"node": "18"
+	},
+	"scripts": {
+		"prepare": "panda codegen && convex codegen",
+		"dev": "pnpm run --parallel /^dev:/",
+		"dev:vite": "vite dev",
+		"dev:convex": "convex dev",
+		"build": "vite build",
+		"start": "vite preview",
+		"lint": "pnpm run --parallel --no-bail /^lint:/",
+		"lint:tsc": "tsc -b",
+		"lint:eslint": "eslint .",
+		"lint:knip": "knip",
+		"lint:prettier": "prettier --cache --check .",
+		"format": "pnpm run --sequential /^format:/",
+		"format:eslint": "eslint . --fix",
+		"format:prettier": "prettier --cache --write ."
+	},
+	"dependencies": {
+		"@fontsource-variable/spline-sans": "^5.0.5",
+		"@radix-ui/react-dropdown-menu": "^2.0.5",
+		"@radix-ui/react-popover": "^1.0.6",
+		"@radix-ui/react-tooltip": "^1.0.6",
+		"convex": "^1.0.2",
+		"lucide-react": "^0.263.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-error-boundary": "^4.0.10",
+		"react-router-dom": "^6.14.2",
+		"react-virtuoso": "^4.4.2",
+		"remix-routes": "^1.4.4",
+		"spin-delay": "^1.2.0",
+		"zod": "^3.21.4",
+		"zod-form-data": "^2.0.1"
+	},
+	"devDependencies": {
+		"@pandacss/dev": "^0.7.0",
+		"@pandacss/preset-panda": "^0.7.0",
+		"@types/eslint": "^8.44.1",
+		"@types/node": "^20.4.4",
+		"@types/react": "^18.2.15",
+		"@types/react-dom": "^18.2.7",
+		"@typescript-eslint/eslint-plugin": "^6.2.0",
+		"@typescript-eslint/parser": "^6.2.0",
+		"@vitejs/plugin-react-swc": "^3.3.2",
+		"eslint": "^8.45.0",
+		"eslint-plugin-react": "^7.33.1",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"knip": "^2.16.1",
+		"prettier": "^3.0.0",
+		"typescript": "5.2.0-beta",
+		"vite": "^4.4.7",
+		"vite-tsconfig-paths": "^4.2.0"
+	}
 }
