sane auth guarding and suspense

--- a/.eslintrc
+++ b/.eslintrc
@@ -27,7 +27,12 @@
 		}
 	},
 	"rules": {
-		"@typescript-eslint/no-unused-vars": ["warn", { "argsIgnorePattern": "^_" }]
+		"@typescript-eslint/no-unused-vars": [
+			"warn",
+			{ "argsIgnorePattern": "^_" }
+		],
+		"no-useless-rename": "warn",
+		"object-shorthand": "warn"
 	},
 	"overrides": [
 		{
@@ -46,6 +51,15 @@
 			],
 			"rules": {
 				"@typescript-eslint/await-thenable": "off",
+				"@typescript-eslint/no-unsafe-argument": "warn",
+				"@typescript-eslint/no-unsafe-assignment": "warn",
+				"@typescript-eslint/no-unsafe-call": "warn",
+				"@typescript-eslint/no-unsafe-member-access": "warn",
+				"@typescript-eslint/no-unsafe-return": "warn",
+				"@typescript-eslint/no-unused-vars": [
+					"warn",
+					{ "argsIgnorePattern": "^_" }
+				],
 				"@typescript-eslint/require-await": "off"
 			},
 			"parserOptions": {
