exclude styled-system
trying to speed up the editor a bit

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
 			"styled-system/*": ["./styled-system/*"]
 		}
 	},
-	"exclude": ["node_modules", "dist", "public/dist"]
+	"exclude": ["node_modules", "dist", "public/dist", "styled-system"]
 }
